@@ -1,6 +1,7 @@
 Changelog:
 
 0.04 - not yet released
+ - Added 'c' to clone a page (templates, yay!)
  - fixed editing page names with strange characters
  - STOSS workspace has lower priority than your stored server 
    and workspace - thanks Chris Simmons
